fix layout on mobile screen

--- a/css/menuPage.css
+++ b/css/menuPage.css
@@ -170,6 +170,7 @@ body{
 #background{
     display: flex;
     gap: 10px;
+    padding-top: 0px;
     justify-content: center;
     padding: 10px;
     background-color: rgba(116, 114, 114, 0.133);
@@ -325,6 +326,32 @@ box-shadow: inset 0 0 0 2px #FF8900;
 
 
 }
+
+/*mobile section when aside hide */
+#mobileSection{
+    padding-left: 10px;
+    padding-top: 20px;
+    padding-right: 10px;
+    background-color: rgba(116, 114, 114, 0.133);
+}
+#searchBarForMobile{
+    border: none;
+    border-radius: 20px;
+    height: 35px;
+    width: 70%;
+    padding-left: 10px;
+    font-size: 1rem;
+    outline: none;
+}
+
+
+
+
+
+
+
+
+
 
 
 @media (max-width: 1200px){
